# cpp-coursework

./: .gitignore  CMakeLists.txt  README.md  main.cpp
classes/: Student.cpp  Student.hpp  Term.cpp  Term.hpp
data/: grades.txt  modules.txt  requests.txt
